<resources>
    <string name="app_name">Comic</string>
    <string name="Home">Trang Chủ</string>
    <string name="BXH">Bảng Xếp Hạng</string>
    <string name="title1">Truyện Nổi Bật</string>
    <string name="text1_2">Truyện Mới Cập Nhật</string>
    <string name="name_comic">Name Comic</string>
    <string name="author">Author</string>
    <string name="chapter_test">Chapter 1234</string>
    <string name="text1_3">Xem thêm</string>
    <string name="getAll">Xem tất cả</string>
    <string name="newUp">Mới Cập Nhật</string>
    <string name="finishComic">Truyện Đã Hoàn Thành</string>
    <string name="finish">Full</string>
    <string name="titleFinish">Đã Hoàn Thành</string>
    <string name="comicNameEx">Thiết Kiếm Sĩ Hồi Quy</string>
    <string name="authorVN">Tác giả</string>
    <string name="updating">Đang Cập Nhật</string>
    <string name="status">Tình Trạng</string>
    <string name="likes">Lượt Thích</string>
    <string name="follow">Lượt Theo Dõi</string>
    <string name="view">Lượt Xem</string>
    <string name="search">Tìm Kiếm</string>
    <string name="cate">Thể Loại</string>
    <string name="top">Bảng Xếp Hạng</string>
    <string name="hello">Xin chào!!</string>
    <string name="name_user">Bấm để đăng nhập!</string>
    <string name="dd">Điểm Danh</string>
    <string name="chu_i_ng_y_c">Chuỗi ngày đọc</string>
    <string name="chap_c">Chap đã đọc</string>
    <string name="try_n_ang_theo_d_i">Truyện đang theo dõi</string>
    <string name="l_ch_s_c_truy_n">Lịch sử đọc truyện</string>
    <string name="nulll">-</string>
    <string name="l_t_theo_d_i">Lượt Theo Dõi</string>
    <string name="c_t_u">Đọc từ đầu</string>
    <string name="l_u">Lưu</string>
    <string name="hot">Độ Hot</string>
    <string name="l_t_like">Lượt Like</string>
    <string name="n_i_dung">Nội dung</string>
    <string name="chapter">Chapter</string>
    <string name="testC">1. Chapter 1</string>
    <string name="_05_03_2025">05/03/2025</string>
    <string name="xem_t_t_c_chapter">Xem tất cả Chapter</string>
    <string name="th_ng_tin_truy_n">Thông tin truyện</string>
    <string name="c_p_nh_t_n_chap">Cập nhật đến chap ---</string>
    <string name="ng_nh_p_b_ng_google">Đăng nhập bằng Google</string>
    <string name="ng_nh_p_b_ng_facebook">Đăng nhập bằng Facebook</string>
    <string name="ho_c">--------------Hoặc--------------</string>
    <string name="web_client_id">349914867765-t1dnido2nk3fpk083u0rjhbm4oe9qkl7.apps.googleusercontent.com</string>
    <string name="username">Username...</string>
    <string name="t_i_kho_n">Tài Khoản</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="password">Password...</string>
    <string name="ng_k">Đăng kí</string>
</resources>