<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_bia"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        android:src="@drawable/test2"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_namecm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/name_comic"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/text1"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginStart="120dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_authorcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/text_icon_nav"
        android:layout_marginStart="120dp"
        android:textSize="11sp"
        android:drawablePadding="2dp"
        app:drawableTint="@color/text2"
        android:drawableStart="@drawable/ic_person"
        android:layout_marginTop="28dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_newest_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter_test"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/orange"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:textSize="11sp"
        android:background="@drawable/material_textview_corner"
        android:layout_marginStart="120dp"
        android:layout_marginTop="55dp" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/finish"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:textSize="11sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:background="@drawable/material_textview_corner"
        android:layout_marginStart="210dp"
        android:layout_marginTop="55dp" />
</FrameLayout>