<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PersonFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_anhdaidien"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/man"
        android:adjustViewBounds="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:shapeAppearanceOverlay="@style/RoundedImageViewPerson"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/hello"
        android:textSize="13sp"
        android:textColor="@color/text2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/img_anhdaidien"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_anhdaidien"
        android:layout_marginStart="12dp"
        android:textSize="17sp"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/text1_1"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_moreif"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="5dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_dd"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="5dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ln6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_nameUser"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="-"
                android:textColor="@color/text1_1"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chap_c"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/text2"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_chuoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="-"
                android:textColor="@color/text1_1"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chu_i_ng_y_c"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/text2"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/try_n_ang_theo_d_i"
        android:textColor="@color/text1_1"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln6" />
    <FrameLayout
        android:id="@+id/fr_dtd"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/l_ch_s_c_truy_n"
        android:textColor="@color/text1_1"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_dtd" />
    <FrameLayout
        android:id="@+id/fr_ls"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>