<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/slimg" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="Đăng Nhập"
        android:textColor="@color/text1"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp"
        android:fontFamily="@font/poppinsmedium"
        android:text="Lưu truyện, theo dõi và nhiều thứ hơn nữa..."
        android:textColor="@color/text1_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView4">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/t_i_kho_n"
            android:textColor="@color/text1_1"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_usn"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:textSize="15sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_edt"
            android:hint="@string/username" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/m_t_kh_u"
            android:textColor="@color/text1_1"
            android:textSize="12sp" />

        <EditText
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:background="@drawable/rounded_edt"
            android:layout_marginTop="5dp"
            android:id="@+id/edt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_LG"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/btn"
        android:text="Đăng Nhập"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/materialButton_LG"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="---------------Hoặc---------------"
            android:textSize="12sp" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_k"
        android:textSize="13sp"
        android:textColor="@color/btn"
        android:layout_marginStart="105dp"
        android:fontFamily="@font/poppinssemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  nếu chưa có tài khoản!"
        android:textSize="13sp"
        android:textColor="@color/text1_1"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintStart_toEndOf="@+id/materialTextView6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>