<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/frg"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/Home"
                android:textColor="@color/text1"
                android:textSize="23sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_src"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginStart="165dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_search"
                android:tint="@color/text1" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_cate"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_category"
                android:tint="@color/text1" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/title1"
            android:textSize="14sp"
            android:textColor="@color/text1_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpg_slideimg"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="10dp"
            android:paddingRight="250dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <LinearLayout
            android:id="@+id/lnr"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vpg_slideimg">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/text1_2"
                android:textColor="@color/text1_1"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_xemthem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1_3"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:layout_gravity="center|top"
                android:textColor="@color/btn"
                android:layout_marginStart="140dp"
                android:fontFamily="@font/poppinsregular"
                android:textSize="13sp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_listMCN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="1200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lnr" />

        <LinearLayout
            android:id="@+id/lnr2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="2dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcl_listMCN">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/finishComic"
                android:textColor="@color/text1_1"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_xemthem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1_3"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:layout_gravity="center|top"
                android:textColor="@color/btn"
                android:layout_marginStart="123dp"
                android:fontFamily="@font/poppinsregular"
                android:textSize="13sp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_listHT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="1200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lnr2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>